--- a/JavaFX/Exercici02/src/main/resources/assets/desktopMainView.fxml
+++ b/JavaFX/Exercici02/src/main/resources/assets/desktopMainView.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.ControllerDesktop">
    <children>
       <Pane layoutY="-2.0" prefHeight="64.0" prefWidth="600.0" style="-fx-background-color: #37D8F0;">
          <children>
@@ -18,8 +19,12 @@
             </Text>
          </children>
       </Pane>
-      <ChoiceBox layoutX="14.0" layoutY="70.0" prefHeight="26.0" prefWidth="168.0" />
-      <VBox layoutX="14.0" layoutY="109.0" prefHeight="281.0" prefWidth="168.0" />
-      <Pane layoutX="200.0" layoutY="70.0" prefHeight="320.0" prefWidth="391.0" />
+      <ChoiceBox fx:id="desktopChoiceBox" layoutX="14.0" layoutY="70.0" prefHeight="26.0" prefWidth="168.0" />
+      <VBox fx:id="desktopElementsList" layoutX="14.0" layoutY="109.0" prefHeight="281.0" prefWidth="168.0" />
+      <ScrollPane hbarPolicy="NEVER" layoutX="219.0" layoutY="70.0" prefHeight="320.0" prefWidth="362.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="317.0" prefWidth="353.0" />
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
