--- a/JavaFX/Exercici03/src/main/resources/assets/layout.fxml
+++ b/JavaFX/Exercici03/src/main/resources/assets/layout.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="455.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller">
+<AnchorPane prefHeight="460.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller">
    <children>
       <VBox prefHeight="448.0" prefWidth="600.0">
          <children>
@@ -23,7 +23,7 @@
             </Label>
             <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="368.0" prefWidth="557.0" style="-fx-border-radius: 8; -fx-background-radius: 8; -fx-border-color: black;">
                <content>
-                  <VBox fx:id="responseBox" prefHeight="330.0" prefWidth="528.0" />
+                  <VBox fx:id="responseBox" prefHeight="309.0" prefWidth="528.0" />
                </content>
                <padding>
                   <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
@@ -34,15 +34,7 @@
             </ScrollPane>
             <HBox prefHeight="57.0" prefWidth="600.0">
                <children>
-                  <ImageView fx:id="btnAddImage" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
-                     <HBox.margin>
-                        <Insets left="32.0" right="-48.0" top="2.0" />
-                     </HBox.margin>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </ImageView>
-                  <TextField fx:id="textPrompt" prefHeight="142.0" prefWidth="565.0" promptText="Message..." style="-fx-background-radius: 32; -fx-border-radius: 32;">
+                  <TextField fx:id="textPrompt" onAction="#callStream" prefHeight="142.0" prefWidth="565.0" promptText="Message..." style="-fx-background-radius: 32; -fx-border-radius: 32;">
                      <padding>
                         <Insets bottom="8.0" left="64.0" right="48.0" top="8.0" />
                      </padding>
@@ -53,20 +45,34 @@
                         <Insets bottom="8.0" />
                      </HBox.margin>
                   </TextField>
+                  <ImageView fx:id="btnAddImage" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                     <HBox.margin>
+                        <Insets left="-550.0" top="6.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
                   <Rectangle fx:id="btnStopResponse" arcHeight="5.0" fill="#616161" height="24.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="24.0">
                      <HBox.margin>
-                        <Insets left="-80.0" top="6.0" />
+                        <Insets left="440.0" top="6.0" />
                      </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Rectangle>
-                  <ImageView fx:id="btnSubmitPrompt" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="btnSubmitPrompt" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#callStream" pickOnBounds="true" preserveRatio="true">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                      <HBox.margin>
-                        <Insets left="6.0" top="1.0" />
+                        <Insets left="6.0" top="6.0" />
                      </HBox.margin>
                   </ImageView>
                </children>
+               <padding>
+                  <Insets left="16.0" />
+               </padding>
             </HBox>
          </children>
       </VBox>
