--- a/JavaFX/Exercici03/src/main/resources/assets/layout.fxml
+++ b/JavaFX/Exercici03/src/main/resources/assets/layout.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="460.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller">
+<AnchorPane prefHeight="460.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.Controller">
    <children>
       <VBox prefHeight="448.0" prefWidth="600.0">
          <children>
@@ -23,7 +23,7 @@
             </Label>
             <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="368.0" prefWidth="557.0" style="-fx-border-radius: 8; -fx-background-radius: 8; -fx-border-color: black;">
                <content>
-                  <VBox fx:id="responseBox" prefHeight="309.0" prefWidth="528.0" />
+                  <VBox fx:id="responseBox" prefWidth="528.0" />
                </content>
                <padding>
                   <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
